Fix relative paths to lib

--- a/templates/app.html
+++ b/templates/app.html
@@ -1,4 +1,4 @@
-__opapp_include(../lib/html/optinomic/page/start.m4)
+__opapp_include(lib/html/optinomic/page/start.m4)
 <div>
     <h3 class="md-headline">Klinikstichprobe</h3>
     <md-tabs md-dynamic-height md-border-bottom md-autoselect md-selected="d.ks.ks_versions.tabs.selectedIndex">
@@ -172,4 +172,4 @@ __opapp_include(../lib/html/optinomic/page/start.m4)
         </md-tab>
     </md-tabs>
 </div>
-__opapp_include(../lib/html/optinomic/page/end.m4)
+__opapp_include(lib/html/optinomic/page/end.m4)
